k8s/nginx.yaml

apiVersion: v1
kind: Service
metadata:
  name: my-nginx-svc
  namespace: ci-cd
  labels:
    app: nginx
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: nginx

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx
  namespace: ci-cd
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-configmap
              

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: nginx-deployment
  namespace: ci-cd
spec:
  ingressClassName: haproxy
  rules:
  - host: nginx.dev.adviseu-it.com
    http:
      paths:
      - backend:
          service:
            name: my-nginx-svc
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
